[package]
name = "localstore"
version = "0.1.0"
edition = "2021"
authors = ["jokemanfire <hu.dingyang@zte.com.cn>"]
description = "localstore"
keywords = ["image", "oci","containerd"]
repository = "https://github.com/jokemanfire/localstore"
license = "MIT/Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
include = [
    "**/*.rs",
    "Cargo.toml",
]


[dependencies]
chrono = "0.4"
walkdir = "2"
digest= "0.10.7"
sha2 = "0.10.8"
ring = "0.16"
hex ="0.4.3"